--- a/calc/src/main/resources/templates/projects/list-projects.html
+++ b/calc/src/main/resources/templates/projects/list-projects.html
@@ -5,12 +5,16 @@
     <!-- Required meta tag-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.rtl.min.css" integrity="sha384-+qdLaIRZfNu4cVPK/PxJJEy0B0f3Ugv8i482AKY7gwXwhaCroABd086ybrVKTa0q" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.rtl.min.css"
+          integrity="sha384-+qdLaIRZfNu4cVPK/PxJJEy0B0f3Ugv8i482AKY7gwXwhaCroABd086ybrVKTa0q" crossorigin="anonymous">
     <title>Project directory</title>
 </head>
 <body>
 <div class="container">
     <h3> Project directory</h3>
+<!--    add button-->
+    <a th:href="@{/projects/showFormForAdd}" class="btn btn-primary btn-sm mb-3">Create project</a>
+
 <hr>
     <table class="table table-bordered table-striped">
         <thead class="table-dark">
