pridėta add forma

--- a/calc/src/main/resources/templates/projects/list-projects.html
+++ b/calc/src/main/resources/templates/projects/list-projects.html
@@ -13,7 +13,7 @@
 <div class="container">
     <h3> Project directory</h3>
 <!--    add button-->
-    <a th:href="@{/projects/showFormForAdd}" class="btn btn-primary btn-sm mb-3">Create project</a>
+    <a th:href="@{/projects/showFormForAdd}" class="btn btn-primary btn-se mb-3" >Add Project</a>
 
 <hr>
     <table class="table table-bordered table-striped">
