--- a/calc/src/main/resources/templates/projects/project-form.html
+++ b/calc/src/main/resources/templates/projects/project-form.html
@@ -7,9 +7,23 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.rtl.min.css"
           integrity="sha384-+qdLaIRZfNu4cVPK/PxJJEy0B0f3Ugv8i482AKY7gwXwhaCroABd086ybrVKTa0q" crossorigin="anonymous">
-    <title>Add Project</title>
+    <title>Save Project</title>
 </head>
 <body>
+<div class="container">
+    <h3>Project directory</h3>
+<br>
+    <p class="h4 mb-4">Save project</p>
+    <form action="#" th:action="@{project/save}" th:object="${project}" method="post">
+        <input type="text" th:field="*{id}" class="form-control mb-4 col-4" placeholder="Project ID">
+        <input type="text" th:field="*{materialsCost}" class="form-control mb-4 col-4" placeholder="Materials">
+        <input type="text" th:field="*{transportCost}" class="form-control mb-4 col-4" placeholder="Transport cost">
+        <input type="text" th:field="*{workHours}" class="form-control mb-4 col-4" placeholder="Work hours">
+        <input type="text" th:field="*{anotherCost}" class="form-control mb-4 col-4" placeholder="Another cost">
+        <input type="text" th:field="*{priceDAP}" class="form-control mb-4 col-4" placeholder="Price DAP">
 
+        <button type="submit" class="btn btn-info col-2"> Save</button>
+    </form>
+</div>
 </body>
 </html>
